# Proyecto-del-Curso-Ingenieria-de-Software

./: README.md
PPI-Backend/: .dockerignore  .gitignore  API_DOCUMENTATION.md  AUDITORIA_API.md  Dockerfile.dev  Dockerfile.prod  NOTIFICATIONS_PLAN.md  README.md  RELACIONES_MODELO.md  SEGURIDAD_Y_TECNICAS.md  SESIONES_REDIS_STRUCTURE.md  TESTS_UNITARIOS.md  check_tables.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  test_local_request.py  test_points_redemption.py  test_puntos_calculation.py  test_transfer_points.py  test_user.py  test_zonas.py
PPI-Backend/app/: main.py
PPI-Backend/app/core/: __init__.py  config.py
PPI-Backend/app/database/: base.py  connection.py
PPI-Backend/app/models/: __init__.py
PPI-Backend/app/repositories/: __init__.py  base_repository.py
PPI-Backend/app/routers/: __init__.py
PPI-Backend/app/schemas/: __init__.py
PPI-Backend/app/services/: __init__.py
PPI-Backend/app/utils/: form_body.py  health_checks.py  sanitizer.py
PPI-Backend/app/worker/: email_worker.py  notification_worker.py
PPI-Backend/scripts/: bulk_seed_usuarios.py  create_payment_tables.py  geocode_batch.py  simulate_ticket_purchases.py  test_pending_coords.py  update_transaction_dates.py
PPI-Backend/tests/: test_auditoria_api.py
PPI-Backend/tests/async_tests/: __init__.py  test_login_async.py
PPI-Backend/tests/rate_limiting/: README.md  test_forgot_password_rate_limit.py  test_login_rate_limit.py  test_register_rate_limit.py
PPI-Backend/tests/unit/: README.md  __init__.py  conftest.py
PPI-Frontend/: .env.example  (+5 more)
(+489 files in other folders)
